Fix Issue #542: SampleApp page-host overflow-y slow on Webkit
Also fixed up the build scripts to work with the changed location of the
vs starter kit template.

--- a/platforms/Mimosa/StarterKit/assets/stylesheets/starterkit.css
+++ b/platforms/Mimosa/StarterKit/assets/stylesheets/starterkit.css
@@ -32,6 +32,7 @@
     bottom: 0;
     overflow-x: hidden;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 section {
